[gd_scene load_steps=5 format=3 uid="uid://hilsr40tavac"]

[ext_resource type="Script" path="res://rock.gd" id="1_5lq2j"]
[ext_resource type="Texture2D" uid="uid://kqan23jib75p" path="res://Assets/rock-7562944_1280.png" id="1_wl5fp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7yo3h"]
radius = 12.0
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xv1xk"]
radius = 46.0
height = 98.0

[node name="Rock" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_5lq2j")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3.8147e-06)
scale = Vector2(0.0844728, 0.0844728)
texture = ExtResource("1_wl5fp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7yo3h")

[node name="Timer" type="Timer" parent="."]

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CapsuleShape2D_xv1xk")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_pickup_area_body_exited"]
